--- a/resources/index.html
+++ b/resources/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/xterm.css" />
     <link rel="stylesheet" href="./css/xterm_customize.css" />
