--- a/resources/index.html
+++ b/resources/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/xterm_customize.css" />
   </head>
   <body>
-    <div id="terminal" style="position:relative; width:100%; height:100%"></div>
+    <div id="terminal"></div>
     <script src="./js/gotty-bundle.js"></script>
   </body>
 </html>
