static files: gotty -> wetty

--- a/resources/index.html
+++ b/resources/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="terminal"></div>
-    <script src="./js/gotty-bundle.js"></script>
+    <script src="./js/wetty-bundle.js"></script>
   </body>
 </html>
