--- a/www/index.html
+++ b/www/index.html
@@ -2,24 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="dist/bundle.css" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./dist/bundle.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
+    <meta name="theme-color" content="#db7093" />
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="dist/bundle.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script type="module" src="./dist/bundle.js"></script>
+    <script>
+      // Check to make sure the browser supports service workers
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("./sw.js")
+          .then(() => {
+            console.log("Service worker registered");
+          })
+          .catch((err) => {
+            console.log("Service worker registration failed: " + err);
+          });
+      }
+    </script>
   </body>
 </html>
