--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./dist/bundle.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
