more html meta tags

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./dist/bundle.css" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="WeTTY">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link
       rel="apple-touch-icon"
